<resources>
    <string name="app_name">US Quarters</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="menu_item_1">Other settings</string>
    <string name="json">test.json</string>

    <string name="theme_states">Statehood Quarters</string>
    <string name="theme_states_p">Statehood Quarters (P)</string>
    <string name="theme_states_d">Statehood Quarters (D)</string>
    <string name="theme_parks">America the Beautiful</string>
    <string name="theme_parks_p">America the Beautiful (P)</string>
    <string name="theme_parks_d">America the Beautiful (D)</string>
    <string name="theme_presidents">Presidential Dollars</string>
    <string name="theme_presidents_p">Presidential Dollars (P)</string>
    <string name="theme_presidents_d">Presidential Dollars (D)</string>
    <string name="theme_sacagawea">Sacagawea Dollars</string>
    <string name="theme_sacagawea_p">Sacagawea Dollars (P)</string>
    <string name="theme_sacagawea_d">Sacagawea Dollars (D)</string>

    <string name="nav_sacagawea">Sacagawea (2000- )</string>
    <string name="nav_sacagawea_p">Sacagawea (2000- ) (P)</string>
    <string name="nav_sacagawea_d">Sacagawea (2000- ) (D)</string>
    <string name="nav_quarters">Quarters</string>
    <string name="nav_states">Statehood (1999-2009)</string>
    <string name="nav_states_p">Statehood (1999-2009) (P)</string>
    <string name="nav_states_d">Statehood (1999-2009) (D)</string>
    <string name="nav_parks">National Parks (2010- )</string>
    <string name="nav_parks_p">National Parks (2010- ) (P)</string>
    <string name="nav_parks_d">National Parks (2010- ) (D)</string>
    <string name="nav_presidents">Presidents (2007-2016)</string>
    <string name="nav_presidents_p">Presidents (2007-2016) (P)</string>
    <string name="nav_presidents_d">Presidents (2007-2016) (D)</string>
    <string name="dollars">Dollars</string>
    <string name="grade_unc">UNC</string>
    <string name="grade_fine">Fine</string>
    <string name="grade_good">Good</string>
    <string name="grade_poor">Poor</string>
    <string name="add_and_close"><![CDATA[Add & CLOSE]]></string>
    <string name="mintage">"Mintage: "</string>
    <string name="coming_soon">"Will be issued on "</string>
    <string name="tab_all">ALL</string>
    <string name="tab_need">NEED</string>
    <string name="tab_swap">SWAP</string>
    <string name="tab_unc">UNC-</string>
    <string name="mints_separate">Mints separate</string>
    <string name="mints_together">Mints together</string>
    <string name="no_mints">No mints at all</string>

</resources>
