<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvItem"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    cardview:cardBackgroundColor="@color/white"
    cardview:cardCornerRadius="8dp"
    cardview:cardPreventCornerOverlap="false">

    <RelativeLayout
        android:id="@+id/rlItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/primary"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="Harpers Ferry"
            android:textColor="@color/white"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvName"
            android:layout_gravity="center"
            android:background="@color/primary"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="12dp"
            android:textSize="15sp"
            android:text="National Historical Park"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvMark"
            android:background="@color/primary_dark"
            android:text="P"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_height="80dp"
            android:layout_width="24dp"/>

        <FrameLayout
            android:layout_width="40dp"
            android:background="@color/white"
            android:layout_below="@id/tvDescription"
            android:layout_alignParentStart="true"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/tvMintage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_below="@id/tvDescription"
            android:layout_margin="8dp"
            android:text="MINT: 219,241,000 " />

        <ImageView
            android:id="@+id/ivCoin"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_below="@id/tvMintage"
            android:layout_marginBottom="-4dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/p0040" />

        <TableLayout
            android:id="@+id/tlTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivCoin"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:paddingEnd="12dp"
            android:paddingStart="4dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:text="@string/grade_unc" />

                <Button
                    android:id="@+id/bAddUnc"
                    style="@style/myBorderlessButton"
                    android:layout_width="36dp"
                    android:layout_height="wrap_content"
                    android:text="+" />

                <TextView
                    android:id="@+id/tvUnc"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:text="0" />

                <Button
                    android:id="@+id/bDeleteUnc"
                    style="@style/myBorderlessButton"
                    android:layout_width="36dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:text="-" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:text="@string/grade_good" />

                <Button
                    android:id="@+id/bAddFine"
                    style="@style/myBorderlessButton"
                    android:layout_width="36dp"
                    android:layout_height="wrap_content"
                    android:text="+" />

                <TextView
                    android:id="@+id/tvFine"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:text="2" />

                <Button
                    android:id="@+id/bDeleteFine"
                    style="@style/myBorderlessButton"
                    android:layout_width="36dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:text="-" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/grade_fine"
                    android:textSize="15sp"/>

                <Button
                    android:id="@+id/bAddAUnc"
                    style="@style/myBorderlessButton"
                    android:layout_width="36dp"
                    android:layout_height="wrap_content"
                    android:text="+" />

                <TextView
                    android:id="@+id/tvAUnc"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="2"
                    android:textSize="15sp"/>

                <Button
                    android:id="@+id/bDeleteAUnc"
                    style="@style/myBorderlessButton"
                    android:layout_width="36dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:text="-"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/grade_poor"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/bAddGood"
                    style="@style/myBorderlessButton"
                    android:layout_width="36dp"
                    android:layout_height="wrap_content"
                    android:text="+"/>

                <TextView
                    android:id="@+id/tvGood"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="2"
                    android:textSize="15sp"/>

                <Button
                    android:id="@+id/bDeleteGood"
                    style="@style/myBorderlessButton"
                    android:layout_width="36dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:text="-" />

            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/bUncClose"
            style="@style/myBorderlessButton"
            android:textColor="@color/accent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tlTable"
            android:layout_centerInParent="true"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="-8dp"
            android:textSize="15sp"
            android:text="@string/add_and_close" />

    </RelativeLayout>

</android.support.v7.widget.CardView>